feat: Add homepage field to Cargo.toml files across the project

--- a/examples/hello/Cargo.toml
+++ b/examples/hello/Cargo.toml
@@ -16,6 +16,7 @@ authors = { workspace = true }
 edition = { workspace = true }
 rust-version = { workspace = true }
 license = { workspace = true }
+homepage = { workspace = true }
 
 [lib]
 name = "hello"
