--- a/phper-macros/Cargo.toml
+++ b/phper-macros/Cargo.toml
@@ -18,6 +18,7 @@ edition = { workspace = true }
 rust-version = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+homepage = { workspace = true }
 
 [lib]
 proc-macro = true
