--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ members = [
 authors = ["PHPER Framework Team", "jmjoy <jmjoy@apache.org>"]
 edition = "2024"
 license = "MulanPSL-2.0"
+homepage = "https://phper-framework.github.io/"
 repository = "https://github.com/phper-framework/phper"
 rust-version = "1.85"
 
