--- a/examples/complex/Cargo.toml
+++ b/examples/complex/Cargo.toml
@@ -16,6 +16,7 @@ edition = { workspace = true }
 rust-version = { workspace = true }
 publish = false
 license = { workspace = true }
+homepage = { workspace = true }
 
 [lib]
 name = "complex"
