--- a/phper-alloc/Cargo.toml
+++ b/phper-alloc/Cargo.toml
@@ -18,6 +18,7 @@ edition = { workspace = true }
 rust-version = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+homepage = { workspace = true }
 
 [dependencies]
 phper-sys = { workspace = true }
