--- a/phper-sys/Cargo.toml
+++ b/phper-sys/Cargo.toml
@@ -18,6 +18,7 @@ edition = { workspace = true }
 rust-version = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+homepage = { workspace = true }
 
 [build-dependencies]
 bindgen = "0.71.1"
