--- a/phper-test/Cargo.toml
+++ b/phper-test/Cargo.toml
@@ -18,6 +18,7 @@ edition = { workspace = true }
 rust-version = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+homepage = { workspace = true }
 
 [dependencies]
 cargo_metadata = "0.20.0"
