--- a/phper/Cargo.toml
+++ b/phper/Cargo.toml
@@ -20,6 +20,7 @@ edition = { workspace = true }
 rust-version = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+homepage = { workspace = true }
 
 [dependencies]
 cfg-if = "1.0.0"
